--- a/tasks/inventory.yml
+++ b/tasks/inventory.yml
@@ -21,6 +21,8 @@
     name: "{{item.public_dns_name}}"
     ansible_user: "{{default_user}}"
     instance_id: "{{item.id}}"
+    private_name: "{{item.private_dns_name}}"
+    private_ip: "{{item.private_ip_address}}"
     groups: ec2hosts
   with_items: "{{ec2_info.instances}}"
   changed_when: False
