--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,29 +1,17 @@
 ---
 profile: default
-region: us-east-2
-key_name: ylu
 instance_type: t2.micro
 image_id: ami-8b92b4ee
 vpc_id: vpc-bd94a7d5
-subnet_id: subnet-de9606a4
+subnet_ids: []
 iam_role: S3GetRole
 ec2_count: 1
+ec2_publicly_accessible: True
 default_user: ec2-user 
+volume_size: 8
 wait_for_up: 360
 pause_for_up: 20
 
-sg_rules:
-  - proto: tcp
-    from_port: 22
-    to_port: 22
-    cidr_ip: 170.140.0.0/16
-  - proto: tcp
-    from_port: 2812
-    to_port: 2812
-    cidr_ip: 170.140.0.0/16
-  - proto: tcp
-    from_port: 443
-    to_port: 443
-    cidr_ip: 170.140.0.0/16
+sg_rules: []
 
 extra_sg_rules: []
