--- a/tasks/destroy.yml
+++ b/tasks/destroy.yml
@@ -6,20 +6,20 @@
     state: 'absent'
     profile: "{{profile}}"
     region: "{{region}}"
-    instance_ids: "{{item.id}}"
+    instance_ids: "{{item.instance_id}}"
   with_items: "{{ec2_info_s}}"
   loop_control:
-    label: "id: {{item.id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
   when: profile != 'tower' and ec2_info_s|length > 0
 
 - name: Terminate instances with tower in {{region}}
   ec2:
     state: 'absent'
     region: "{{region}}"
-    instance_ids: "{{item.id}}"
+    instance_ids: "{{item.instance_id}}"
   with_items: "{{ec2_info_s}}"
   loop_control:
-    label: "id: {{item.id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
   when: profile == 'tower' and ec2_info_s|length > 0
 
 - name: Wait for the instance to shutdown via public ips in {{region}}
@@ -31,7 +31,7 @@
     timeout: 320
   with_items: "{{ec2_info_s}}"
   loop_control:
-    label: "id: {{item.id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
   when: ec2_info_s|length > 0 and ec2_publicly_accessible
 
 - name: Wait for the instance to shutdown via private ips in {{region}}
@@ -43,7 +43,7 @@
     timeout: 320
   with_items: "{{ec2_info_s}}"
   loop_control:
-    label: "id: {{item.id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
   when: ec2_info_s|length > 0 and not ec2_publicly_accessible
 
 - name: Pause for a while
