--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,8 +10,8 @@
     ec2_info: "{{ec2_info}} + [{{item}}]"
   with_items: "{{ec2_info_s}}"
   loop_control:
-    label: "id: {{item.id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
-  when: item.state in ['running']
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+  when: item.state.name in ['running']
 
 - name: Check any non-running instances
   fail:
