--- a/tasks/query.yml
+++ b/tasks/query.yml
@@ -5,10 +5,11 @@
   when: ec2_info_s is not defined
 
 - name: Get facts on ec2 instances with profile in {{region}}
-  ec2_remote_facts:
+  ec2_instance_facts:
     profile: "{{profile}}"
     region: "{{region}}"
     filters:
+      instance-state-name: ["pending", "running", "stopping", "stopped"]
       "tag:Name": "{{instance_tag | default(key_name + '_test')}}"
       "tag:Service": "{{service_tag | default('test_' + key_name)}}"
       "tag:Env": "{{env_tag | default('test')}}"
@@ -20,16 +21,16 @@
     ec2_info_s: "{{ec2_info_s}} + [{{item}}]"
   with_items: "{{ec2_info_p.instances}}"
   loop_control:
-    label: "state: {{item.state}}, id: {{item.id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+    label: "state: {{item.state.name}}, id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
   when:
     - ec2_info_p.instances is defined
-    - item.state not in ['shuting-down', 'terminated']
+    - item.state.name not in ['shutting-down', 'terminated']
 
 - name: Get facts on ec2 instances with tower in {{region}}
-  ec2_remote_facts:
+  ec2_instance_facts:
     region: "{{region}}"
     filters:
-      key_name: "{{key_name}}"
+      instance-state-name: ["pending", "running", "stopping", "stopped"]
       "tag:Name": "{{instance_tag | default(key_name + '_test')}}"
       "tag:Service": "{{service_tag | default('test_' + key_name)}}"
       "tag:Env": "{{env_tag | default('test')}}"
@@ -41,7 +42,7 @@
     ec2_info_s: "{{ec2_info_s}} + [{{item}}]"
   with_items: "{{ec2_info_k.instances}}"
   loop_control:
-    label: "state: {{item.state}}, id: {{item.id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+    label: "state: {{item.state.name}}, id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
   when:
     - ec2_info_k.instances is defined
-    - item.state not in ['shuting-down', 'terminated']
+    - item.state.name not in ['shutting-down', 'terminated']
