--- a/tasks/query_subnet.yml
+++ b/tasks/query_subnet.yml
@@ -4,23 +4,20 @@
     ec2_subnet_info: []
   when: ec2_subnet_info is not defined
 
-- name: Get ec2 subnet facts with profile (boto3 required)
+- name: Get ec2 subnet facts with profile (boto3 and Ansible 2.5+ required)
   ec2_vpc_subnet_facts:
     profile: "{{profile}}"
     region: "{{region}}"
-    filters:
-      vpc_id: "{{vpc_id}}"
-      subnet_id: "{{item}}"
-  with_items: "{{my_subnet_ids}}"
+    subnet_ids: "{{my_subnet_ids}}"
   when: profile != 'tower'
   register: ec2_subnet_info_p
 
 - name: Add subnet to ec2_subnet_info with profile in {{region}}
   set_fact:
-    ec2_subnet_info: "{{ec2_subnet_info}} + [{{item.subnets[0]}}]"
-  with_items: "{{ec2_subnet_info_p.results}}"
+    ec2_subnet_info: "{{ec2_subnet_info}} + [{{item}}]"
+  with_items: "{{ec2_subnet_info_p.subnets}}"
   loop_control:
-    label: "{{item.item}}"
+    label: "{{item.id}}: {{item.cidr_block}}"
   when: profile != 'tower'
 
 - name: Get ec2 subnet facts with tower (boto3 and Ansible 2.5+ required)
