--- a/tasks/inventory.yml
+++ b/tasks/inventory.yml
@@ -9,6 +9,9 @@
 
 - name: Query facts on the AMI with tower in {{region}}
   ec2_ami_facts:
+    access_key: "{{assumed_role.sts.access_key|default(None)}}"
+    secret_key: "{{assumed_role.sts.secret_key|default(None)}}"
+    security_token: "{{assumed_role.sts.session_token|default(None)}}"
     region: "{{region}}"
     image_ids: "{{ec2_info[0].image_id}}"
   when: profile == 'tower'
@@ -31,10 +34,11 @@
     instance_id: "{{item.instance_id}}"
     private_name: "{{item.private_dns_name}}"
     private_ip: "{{item.private_ip_address}}"
+    az: "{{item.placement.availability_zone}}"
     groups: ec2hosts
   with_items: "{{ec2_info}}"
   loop_control:
-    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}, user: {{default_user}}"
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}, user: {{default_user}}, az: {{item.placement.availability_zone}}"
   when: ec2_publicly_accessible
   changed_when: False
 
@@ -45,9 +49,10 @@
     instance_id: "{{item.instance_id}}"
     private_name: "{{item.private_dns_name}}"
     private_ip: "{{item.private_ip_address}}"
+    az: "{{item.placement.availability_zone}}"
     groups: ec2hosts
   with_items: "{{ec2_info}}"
   loop_control:
-    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}, user: {{default_user}}"
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}, user: {{default_user}}, az: {{item.placement.availability_zone}}"
   when: not ec2_publicly_accessible
   changed_when: False
