--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
     ec2_info: "{{ec2_info}} + [{{item}}]"
   with_items: "{{ec2_info_s}}"
   loop_control:
-    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}"
+    label: "id: {{item.instance_id}}, hostname: {{item.public_dns_name}}, private_ip: {{item.private_ip_address}}, az: {{item.placement.availability_zone}}"
   when: item.state.name in ['running']
 
 - name: Check any non-running instances
