--- a/tasks/query_sg.yml
+++ b/tasks/query_sg.yml
@@ -7,11 +7,11 @@
 - name: Get ec2 security group facts with profile (boto3 required)
   ec2_group_facts:
     profile: "{{profile}}"
+    security_token: "{{session_token|default(None)}}"
     region: "{{region}}"
     filters:
       vpc_id: "{{vpc_id}}"
       group_name: "{{sg_name|default(key_name + '_sg')}}"
-  when: profile != 'tower'
   register: ec2_sg_info_p
 
 - name: Add sg to ec2_sg_info with profile in {{region}}
@@ -21,23 +21,3 @@
   loop_control:
     label: "{{item.group_name}}: {{item.group_id}}"
   when: ec2_sg_info_p.security_groups is defined and ec2_sg_info_p.security_groups|length > 0
-
-- name: Get ec2 security group facts with tower (boto3 required)
-  ec2_group_facts:
-    access_key: "{{assumed_role.sts.access_key|default(None)}}"
-    secret_key: "{{assumed_role.sts.secret_key|default(None)}}"
-    security_token: "{{assumed_role.sts.session_token|default(None)}}"
-    region: "{{region}}"
-    filters:
-      vpc_id: "{{vpc_id}}"
-      group_name: "{{sg_name|default(key_name + '_sg')}}"
-  when: profile == 'tower'
-  register: ec2_sg_info_k
-
-- name: Add sg to ec2_sg_info with tower in {{region}}
-  set_fact:
-    ec2_sg_info: "{{ec2_sg_info}} + [{{item}}]"
-  with_items: "{{ec2_sg_info_k.security_groups}}"
-  loop_control:
-    label: "{{item.group_name}}: {{item.group_id}}"
-  when: ec2_sg_info_k.security_groups is defined and ec2_sg_info_k.security_groups|length > 0
