--- a/tasks/query_subnet.yml
+++ b/tasks/query_subnet.yml
@@ -1,15 +1,10 @@
 ---
-- name: Set ec2_subnet_info
-  set_fact:
-    ec2_subnet_info: []
-  when: ec2_subnet_info is not defined
-
 - name: Get ec2 subnet facts with profile (boto3 and Ansible 2.5+ required)
   ec2_vpc_subnet_facts:
     profile: "{{profile}}"
+    security_token: "{{session_token|default(None)}}"
     region: "{{region}}"
     subnet_ids: "{{my_subnet_ids}}"
-  when: profile != 'tower'
   register: ec2_subnet_info_p
 
 - name: Add subnet to ec2_subnet_info with profile in {{region}}
@@ -18,22 +13,3 @@
   with_items: "{{ec2_subnet_info_p.subnets}}"
   loop_control:
     label: "{{item.id}}: {{item.cidr_block}}"
-  when: profile != 'tower'
-
-- name: Get ec2 subnet facts with tower (boto3 and Ansible 2.5+ required)
-  ec2_vpc_subnet_facts:
-    access_key: "{{assumed_role.sts.access_key|default(None)}}"
-    secret_key: "{{assumed_role.sts.secret_key|default(None)}}"
-    security_token: "{{assumed_role.sts.session_token|default(None)}}"
-    region: "{{region}}"
-    subnet_ids: "{{my_subnet_ids}}"
-  when: profile == 'tower'
-  register: ec2_subnet_info_k
-
-- name: Add subnet to ec2_subnet_info with tower in {{region}}
-  set_fact:
-    ec2_subnet_info: "{{ec2_subnet_info}} + [{{item}}]"
-  with_items: "{{ec2_subnet_info_k.subnets}}"
-  loop_control:
-    label: "{{item.id}}: {{item.cidr_block}}"
-  when: profile == 'tower'
